@@ -35,6 +35,8 @@ Where you should replace XXXXX with a bug-id.
 0.73: please submit patches for this section with actual code/doc
       patches!
 
+* removed static variable from pam_wheel (module should be thread safe
+  now). (Bug 112906 - agmorgan)
 * added support for '/' symbols in pam_time and pam_group config files
   (support for modern terminal devices). Fixed infinite loop problem
   with '\\[^\n]' in these files. (Bug 116076 - agmorgan)
